# ReproBugBazelTypescript

./: WORKSPACE  package.json  tsconfig.json
app/: BUILD.bazel  app.ts  index.html
module/a/: BUILD.bazel  index.ts  some-class.ts
