package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_devserver", "ts_library")

ts_library(
    name = "app",
    srcs = [":app.ts"],
    deps = [
         "//module/a",
     ],
)

ts_devserver(
    name = "devserver",
    serving_path = "/script.js",
    static_files = [
        "index.html",
    ],
    deps = [":app"],
)